--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
                   </li>
                   <li>
                     <span class="pro-title"> e-mail </span>
-                    <span class="pro-detail">alencarbcontact.com</span>
+                    <span class="pro-detail">brunodealencart@gmail.com</span>
                   </li>
                   <li>
                     <span class="pro-title"> Phone </span>
