--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                   Bruno De Alencar
                 </h2>
                 <p class="script-font wow fadeInUp" data-wow-delay="0.6s">
-                  Web Developer and Graphic Analist
+                  Software Engineer and Graphic Analist.
                 </p>
                 <ul class="social-icon wow fadeInUp" data-wow-delay="0.8s">
                   <li>
@@ -215,15 +215,15 @@
             <div class="profile-wrapper wow fadeInRight" data-wow-delay="0.3s">
               <h3>Hi Guys!</h3>
               <p>
-                I am a computer developer and have experience in working in many
+                I am a Software Engineer, and have experience in working in many
                 freelances jobs as technical Lead and Front-End developer.
                 Interested in making life easier by creating utility tools.
                 Fascinated about trading.
               </p>
 
               <p>
-                🔭 I’m currently developing working on HTML, CSS, JS, Python and
-                SQL.
+                🔭 I’m currently developing working on JavaScript, NodeJs and
+                SQL. SAP FIORI and SAPUI5.
               </p>
 
               <p>📊 cryptocurrency and financial market specialist.</p>
@@ -231,7 +231,7 @@
               <p>👨‍💻 I am looking outside the box .</p>
 
               <p>
-                ⚡Available for Freelance projects/internship opportunities.
+                ⚡I work in EBANX. 
               </p>
 
               <div class="about-profile">
@@ -373,7 +373,7 @@
                     <h3 class="line-title">Freecodecamp</h3>
                     <span>2018</span>
                     <p class="line-text">
-                      Front End Web Development Cetification Área de
+                      Front-End Development Cetification Área de
                       estudoSoftware engineering.
                     </p>
                   </div>
@@ -397,6 +397,21 @@
                   <i class="icon-briefcase"></i>
                   <h2 class="timelin-title">Experience</h2>
                 </li>
+                <li>
+                  <div class="content-text">
+                    <h3 class="line-title">
+                      Software Engineer - EBANX.
+                    </h3>
+                    <span>Jan 2018 - Present</span>
+                    <p class="line-text">
+                      Software Engineer Jr. acting as a
+                      programmer in the role of creating and correcting system
+                      failures, as well as adjusting codes in
+                      JavaScript language. Work with SAP - SAP FIORI - SAPUI5.
+                    </p>
+                  </div>
+                </li>
+
                 <li>
                   <div class="content-text">
                     <h3 class="line-title">
