--- a/index.html
+++ b/index.html
@@ -760,8 +760,8 @@
                       <i class="fa fa-envelope"></i>
                     </div>
                     <p>
-                      <a href="alencarbcontact@gmail.com"
-                        >alencarbcontact@gmail.com</a
+                      <a href="brunodealencart@gmail.com"
+                        >brunodealencart@gmail.com</a
                       >
                     </p>
                     <p>
